the form is now fully functional

--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -7,13 +7,13 @@ script:
   native:
     - "--ntasks"
     - "1"
-#    - "--cpus-per-task"
-#    - "<%= cpus %>"
-#    - "--mem"
-#    - "<%= mem_gb %>G"
-#    - "--partition"
-#    - "<%= partition %>"
-#    - "--time"
-#    - "<%= time_h %>:00:00"
+    - "--cpus-per-task"
+    - "<%= cpus %>"
+    - "--mem"
+    - "<%= mem_gb %>G"
+    - "--partition"
+    - "<%= partition %>"
+    - "--time"
+    - "<%= time %>"
 
 
