update ngs image location

--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -12,6 +12,8 @@ singularity exec \
     --env USER="$(id -un)" \
     --env PASSWORD="${password}" \
     --bind "/scratch:/tmp" \
+    --bind "/acanas/m-BioinfoSupport/prados" \
+    --bind "$(realpath ~/scratch)" \
     --bind "${workdir}/run:/run" \
     --bind "${workdir}/var/lib/rstudio-server:/var/lib/rstudio-server" \
     "<%= context.image %>" \
