try to fix auth issue

--- a/template/before.sh.erb
+++ b/template/before.sh.erb
@@ -5,5 +5,5 @@ set -x
 # Find available port to run server on
 port="$(find_port ${host})"
 password="$(create_passwd 16)"
-csrf_token="<%= SecureRandom.uuid %>"
+export RSTUDIO_PASSWORD="${password}"
 
