try not encrypt passwd

--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -23,6 +23,7 @@ singularity exec \
         --www-port=${port} \
         --server-user="$USER" \
         --auth-none=0 \
+        --auth-encrypt-password=0 \
         --auth-pam-helper-path=pam-helper \
         --auth-stay-signed-in-days=30 \
         --auth-timeout-minutes=0 \
