--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -12,7 +12,7 @@ script:
     - "--mem"
     - "<%= mem_gb %>G"
     - "--partition"
-    - "<%= partition %>"
+    - "<%= auto_queues %>"
     - "--time"
     - "<%= time %>"
     - "--signal"
